src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>Text category</description>
        <label>Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_publication__c</fullName>
        <inlineHelpText>This field serves to identify which countries are concerned with the document; It does not apply filtering to those countries</inlineHelpText>
        <label>Country of publication</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All - Globally</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_visibilty__c</fullName>
        <label>Country visibilty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All - Globally</fullName>
                </value>
                <value>
                    <fullName>All - Region Africa &amp; Middle East</fullName>
                </value>
                <value>
                    <fullName>All - Region Americas</fullName>
                </value>
                <value>
                    <fullName>All - Region Asia &amp; Pacific</fullName>
                </value>
                <value>
                    <fullName>All - Region China &amp; North Asia</fullName>
                </value>
                <value>
                    <fullName>All - Region Europe</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Virgin Islands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Category__c</fullName>
        <label>Document Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accreditation</fullName>
                </value>
                <value>
                    <fullName>Bulletins and News</fullName>
                </value>
                <value>
                    <fullName>Calendars</fullName>
                </value>
                <value>
                    <fullName>Forms and Procedures</fullName>
                </value>
                <value>
                    <fullName>Products and Services</fullName>
                </value>
                <value>
                    <fullName>Resolutions</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICH_Member_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this content is only available for accounts that are ICH members</description>
        <label>ICH Member Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Users_Date__c</fullName>
        <defaultValue>NOW()-100</defaultValue>
        <description>Field used to trigger notification for users who have the document bookmarked in CS Portal. To trigger notification, This fields needs to be large than record&apos;s created Date</description>
        <label>Notify Users Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>The type of product category article is related to</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airline and Location Coding</fullName>
                </value>
                <value>
                    <fullName>AirportIS</fullName>
                </value>
                <value>
                    <fullName>Airsat</fullName>
                </value>
                <value>
                    <fullName>BIS</fullName>
                </value>
                <value>
                    <fullName>CargoIS</fullName>
                </value>
                <value>
                    <fullName>Direct Data Solutions (DDS)</fullName>
                </value>
                <value>
                    <fullName>E&amp;F - Enhancement &amp; Financing</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>IATAN</fullName>
                </value>
                <value>
                    <fullName>ICCS</fullName>
                </value>
                <value>
                    <fullName>ICH - IATA Clearing House</fullName>
                </value>
                <value>
                    <fullName>iiNet</fullName>
                </value>
                <value>
                    <fullName>MarketIS</fullName>
                </value>
                <value>
                    <fullName>MITA/BIETA</fullName>
                </value>
                <value>
                    <fullName>PaxIS</fullName>
                </value>
                <value>
                    <fullName>PUBLICATIONS</fullName>
                </value>
                <value>
                    <fullName>SIS Membership</fullName>
                    <isActive>false</isActive>
                    <label>SIS Membership</label>
                </value>
                <value>
                    <fullName>SIS - Simplified Invoicing &amp; Settlement</fullName>
                </value>
                <value>
                    <fullName>TACT</fullName>
                </value>
                <value>
                    <fullName>TandT</fullName>
                </value>
                <value>
                    <fullName>TIMATIC</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
                <value>
                    <fullName>Treasury Dashboard</fullName>
                </value>
                <value>
                    <fullName>Weblink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ameria</fullName>
                </value>
                <value>
                    <fullName>AME</fullName>
                </value>
                <value>
                    <fullName>ASIA</fullName>
                </value>
                <value>
                    <fullName>EUROPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_status_access__c</fullName>
        <label>User status access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved User</fullName>
                </value>
                <value>
                    <fullName>Approved Admin</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version_Link_Label__c</fullName>
        <description>Version Link Label</description>
        <label>Version Link Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Link__c</fullName>
        <formula>HYPERLINK (&apos;/lightning/r/ContentVersion/&apos; &amp; Id &amp; &apos;/view&apos;, Version_Link_Label__c,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Link</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>BIS</fullName>
        <active>true</active>
        <description>Record Type for BIS Product Libraries</description>
        <label>BIS</label>
    </recordTypes>
    <recordTypes>
        <fullName>FDS</fullName>
        <active>true</active>
        <description>Record for Non-ISS / FDS product Libraries</description>
        <label>FDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>GADM</fullName>
        <active>true</active>
        <description>GADM Files</description>
        <label>GADM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICH</fullName>
        <active>true</active>
        <label>ICH</label>
    </recordTypes>
    <recordTypes>
        <fullName>Translations</fullName>
        <active>true</active>
        <label>Translations</label>
    </recordTypes>
</CustomObject>